# DescriptorDOS

./: .readthedocs.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  readthedocs.yaml
DescriptorDOS/: Analyzer.py  BaseWorker.py  BasicAgent.py  Constants.py  Displacers.py  LAMMPSWorker.py  MPIAgent.py  Manager.py  TensorCompressor.py  YAMLParser.py  __init__.py
analysis/: Inverse-NVT-BCC-FCC.ipynb
analysis/sample_data/: Fe_bcc_444_Hessian_single_vol.pkl  Fe_fcc_333_Hessian_single_vol.pkl  X_Fe.snapcoeff
docs/: api.rst  conf.py  index.rst  mock_modules.py
examples/: .gitignore  configuration-fine.yaml  run.py  submit.slurm
examples/W/: D.snapparam  X_W.snapcoeff  in.lammps
testing/: test.lammps  test.yaml  unittests.py
