[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DescriptorDOS"
version = "0.1.0"
description = "Score-matching the descriptor density of states for model agnostic sampling"
authors = [
    {name = "Thomas D Swinburne", email = "thomas.swinburne@cnrs.fr"}
]
license = "MIT"

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
    "mpi4py>=3.1",
    "matplotlib>=3.4",
    "pyyaml>=6.0.2",
    "lammps>=2024.8.29.0.0"
]

[project.urls]
Homepage = "https://github.com/tomswinburne/DescriptorDOS"
Documentation = "https://github.com/tomswinburne/DescriptorDOS"
Source = "https://github.com/tomswinburne/DescriptorDOS"

[tool.setuptools]
packages = ["DescriptorDOS"]
license-files = []